2002-05-07  Radek Doulik  <rodo@ximian.com>

	* Makefile.am: use versioned libraries

2002-01-08  Radek Doulik  <rodo@ximian.com>

	* main.c: remove spell checking options and add button to call
	gnome spell control applet

2001-10-15  Radek Doulik  <rodo@ximian.com>

	* main.c (APPLY): handle points attribute

	* gtkhtml-capplet.glade: added change handler to print variable
	font picker

2001-09-12  Radek Doulik  <rodo@ximian.com>

	* main.c (picker_clicked): set filter only for mono spaced fonts,
	allow selection of monospaced font for proportional (I realized
	this with Japanese fonts, where you often want use mono spaced
	font as your base [proportional] font)

2001-08-28  Radek Doulik  <rodo@ximian.com>

	* gnome-bindings-prop.c (get_keymap): be more carefull about
	active item
	(gnome_bindings_properties_get_keymap_name): be more carefull
	about keymap entry

	* main.c (main): commented out use of homerc_file, don't free it
	twice


2001-08-12  Radek Doulik  <rodo@ximian.com>

	* used next part of UI designed by Anna, removed custom
	keybindings functionality (before it could be rewritten to use XML
	to store keybindings and allow create custom keybindings based on
	predefined ones - probably post-1.0 :(

2001-08-07  Radek Doulik  <rodo@ximian.com>

	* main.c (picker_clicked): new signal handler which sets filter
	for font selection dialog to avoid selecting proportional font for
	mono spaced one and vice versa
	(setup): use picker_clicked

2001-07-26  Chema Celorio  <chema@celorio.com>

	* gnome-bindings-prop.c (init): set the usize of
	the clists since the new control center is not embeding
	capplets but displaying them in a window

2001-07-25  Radek Doulik  <rodo@ximian.com>

	* Makefile.am: generate .desktop, substitute ICONSDIR

	* moved html-viewer.png to ../art/

2001-07-25  Jakub Steiner <jimmac@ximian.com>

	* html-viewer.png: icon for the new gnomecc. I tried to modify
	  the gtkhtml-properties.desktop and Makefile.am files, but since