@@ -1,29 +1,0 @@
-char *s = N_("\n"
-             "");
-char *s = N_("*");
-char *s = N_("*********************");
-char *s = N_("Add Keyboard Shortcuts");
-char *s = N_("Automatically detect links");
-char *s = N_("Behavior");
-char *s = N_("Composer Properties");
-char *s = N_("Composer Properties planned");
-char *s = N_("Configure spell checking");
-char *s = N_("Enable spell checking");
-char *s = N_("Fixed width");
-char *s = N_("Fonts");
-char *s = N_("For printing");
-char *s = N_("Grab keys");
-char *s = N_("Information");
-char *s = N_("Keyboard Shortcuts");
-char *s = N_("Miscellaneous");
-char *s = N_("New shortcut:");
-char *s = N_("On screen");
-char *s = N_("Select HTML fixed width font");
-char *s = N_("Select HTML fixed width font for printing");
-char *s = N_("Select HTML variable width font");
-char *s = N_("Select HTML variable width font for printing");
-char *s = N_("Shortcuts _type:");
-char *s = N_("Show animated images");
-char *s = N_("Variable width");
-char *s = N_("_Add");
-char *s = N_("_Delete");
