@@ -1,3 +1,0 @@
-char *s = N_("GNOME HTML Editor");
-char *s = N_("GNOME HTML Editor Control");
-char *s = N_("GNOME HTML Editor Factory");
