@@ -1,152 +1,0 @@
-char *s = N_("+0");
-char *s = N_("+1");
-char *s = N_("+2");
-char *s = N_("+3");
-char *s = N_("-1");
-char *s = N_("-2");
-char *s = N_("A_ddress");
-char *s = N_("Alphabetical List");
-char *s = N_("Background Color");
-char *s = N_("Blue");
-char *s = N_("Bulleted List");
-char *s = N_("Center justifies the paragraphs");
-char *s = N_("Check spelling of the document");
-char *s = N_("Copy");
-char *s = N_("Copy selection to clipboard");
-char *s = N_("Copy the selection");
-char *s = N_("Cr_ying");
-char *s = N_("Cu_t");
-char *s = N_("Cut");
-char *s = N_("Cut selection to clipboard");
-char *s = N_("Cut the selection");
-char *s = N_("Find");
-char *s = N_("Find A Regular Expression");
-char *s = N_("Find And Replace");
-char *s = N_("Find Regular E_xpression...");
-char *s = N_("Find _Again");
-char *s = N_("Find again");
-char *s = N_("Find and Replace");
-char *s = N_("For_mat");
-char *s = N_("Green");
-char *s = N_("Header _1");
-char *s = N_("Header _2");
-char *s = N_("Header _3");
-char *s = N_("Header _4");
-char *s = N_("Header _5");
-char *s = N_("Header _6");
-char *s = N_("Image");
-char *s = N_("Insert Crying smiley into document...");
-char *s = N_("Insert Frown smiley into document...");
-char *s = N_("Insert HTML file into document...");
-char *s = N_("Insert HTML link into document...");
-char *s = N_("Insert HTML template into document...");
-char *s = N_("Insert Indifferent smiley into document...");
-char *s = N_("Insert Laughing smiley into document...");
-char *s = N_("Insert Lick smiley into document...");
-char *s = N_("Insert Oh no! smiley into document...");
-char *s = N_("Insert Smile smiley into document...");
-char *s = N_("Insert Surprised smiley into document...");
-char *s = N_("Insert Undecided smiley into document...");
-char *s = N_("Insert Wink smiley into document...");
-char *s = N_("Insert image into document...");
-char *s = N_("Insert rule into document...");
-char *s = N_("Insert table into document...");
-char *s = N_("Insert text file into document...");
-char *s = N_("Left justifies the paragraphs");
-char *s = N_("Li_ck");
-char *s = N_("Link");
-char *s = N_("Make the current Paragraph style Normal");
-char *s = N_("Make the current Paragraph style Preformat");
-char *s = N_("Make the current paragraph a bulleted list");
-char *s = N_("Make the current paragraph a list with roman numerals");
-char *s = N_("Make the current paragraph a numbered list");
-char *s = N_("Make the current paragraph an H1 header");
-char *s = N_("Make the current paragraph an H2 header");
-char *s = N_("Make the current paragraph an H3 header");
-char *s = N_("Make the current paragraph an H4 header");
-char *s = N_("Make the current paragraph an H5 header");
-char *s = N_("Make the current paragraph an H6 header");
-char *s = N_("Make the current paragraph an address");
-char *s = N_("Make the current paragraph an alphabetical list");
-char *s = N_("Normal");
-char *s = N_("Numbered List");
-char *s = N_("Numbered _List");
-char *s = N_("Oh _no!");
-char *s = N_("Orange");
-char *s = N_("Other...");
-char *s = N_("Paste");
-char *s = N_("Paste _Quotation");
-char *s = N_("Paste from clipboard");
-char *s = N_("Paste the clipboard");
-char *s = N_("Paste the clipboard as a quotation");
-char *s = N_("Preformat");
-char *s = N_("Purple");
-char *s = N_("Red");
-char *s = N_("Redo");
-char *s = N_("Redo previously undone change");
-char *s = N_("Redo the undone action");
-char *s = N_("Replace");
-char *s = N_("Right justifies the paragraphs");
-char *s = N_("Roman Numeral List");
-char *s = N_("Rule");
-char *s = N_("Select _All");
-char *s = N_("Select the entire contents of the document");
-char *s = N_("Strikeout");
-char *s = N_("Su_perscript");
-char *s = N_("Su_rprised");
-char *s = N_("Subs_cript");
-char *s = N_("Subscript");
-char *s = N_("Superscript");
-char *s = N_("Table");
-char *s = N_("Te_mplate...");
-char *s = N_("Te_xt file...");
-char *s = N_("Template");
-char *s = N_("Typewriter");
-char *s = N_("Undo");
-char *s = N_("Undo previous changes");
-char *s = N_("Undo the last action");
-char *s = N_("Yellow");
-char *s = N_("_Alignment");
-char *s = N_("_Alphabetical List");
-char *s = N_("_Bold");
-char *s = N_("_Bulleted List");
-char *s = N_("_Center");
-char *s = N_("_Copy");
-char *s = N_("_Decrease Indent");
-char *s = N_("_Edit");
-char *s = N_("_Find...");
-char *s = N_("_Font Size");
-char *s = N_("_Frown");
-char *s = N_("_HTML file...");
-char *s = N_("_Heading");
-char *s = N_("_Image...");
-char *s = N_("_Increase Indent");
-char *s = N_("_Indifferent");
-char *s = N_("_Insert");
-char *s = N_("_Italic");
-char *s = N_("_Laughing");
-char *s = N_("_Left");
-char *s = N_("_Link...");
-char *s = N_("_Normal");
-char *s = N_("_Page...");
-char *s = N_("_Paragraph...");
-char *s = N_("_Paste");
-char *s = N_("_Plain text");
-char *s = N_("_Preformat");
-char *s = N_("_Redo");
-char *s = N_("_Replace...");
-char *s = N_("_Right");
-char *s = N_("_Roman Numeral List");
-char *s = N_("_Rule...");
-char *s = N_("_Smile");
-char *s = N_("_Smiley");
-char *s = N_("_Spell Check Document...");
-char *s = N_("_Strikeout");
-char *s = N_("_Style");
-char *s = N_("_Table...");
-char *s = N_("_Text...");
-char *s = N_("_Undecided");
-char *s = N_("_Underline");
-char *s = N_("_Undo");
-char *s = N_("_Wink");
-char *s = N_("etc...");
