@@ -1,85 +1,0 @@
-char *s = N_("*");
-char *s = N_("************");
-char *s = N_("***text***");
-char *s = N_("+0");
-char *s = N_("+1");
-char *s = N_("+2");
-char *s = N_("+3");
-char *s = N_("+4");
-char *s = N_("-1");
-char *s = N_("-2");
-char *s = N_("Alignment");
-char *s = N_("Alignment:");
-char *s = N_("Apply changes to:");
-char *s = N_("Background");
-char *s = N_("Background Image");
-char *s = N_("Bold");
-char *s = N_("Border");
-char *s = N_("Border:");
-char *s = N_("Bottom");
-char *s = N_("Cell");
-char *s = N_("Center");
-char *s = N_("Click will follow this URL");
-char *s = N_("Click will follow this URL:");
-char *s = N_("Color:");
-char *s = N_("Colors");
-char *s = N_("Column");
-char *s = N_("Column span:");
-char *s = N_("Columns:");
-char *s = N_("Description:");
-char *s = N_("Don't wrap");
-char *s = N_("Enable");
-char *s = N_("Follow");
-char *s = N_("Font size");
-char *s = N_("Foreground color");
-char *s = N_("Header");
-char *s = N_("Height:");
-char *s = N_("Horizontal alignment:");
-char *s = N_("Horizontal:");
-char *s = N_("Image");
-char *s = N_("Italic");
-char *s = N_("Left");
-char *s = N_("Length:");
-char *s = N_("Link insert");
-char *s = N_("Link properties");
-char *s = N_("Location");
-char *s = N_("Middle");
-char *s = N_("Miscellaneous");
-char *s = N_("None");
-char *s = N_("Normal");
-char *s = N_("Padding");
-char *s = N_("Padding:");
-char *s = N_("Page");
-char *s = N_("Percent");
-/* xgettext:no-c-format */
-char *s = N_("Percent %");
-char *s = N_("Pixels");
-char *s = N_("Pixmap:");
-char *s = N_("Points");
-char *s = N_("Right");
-char *s = N_("Row");
-char *s = N_("Row span:");
-char *s = N_("Rows:");
-char *s = N_("Rule");
-char *s = N_("Scope");
-char *s = N_("Shaded");
-char *s = N_("Size");
-char *s = N_("Spacing");
-char *s = N_("Spacing:");
-char *s = N_("Strikeout");
-char *s = N_("Style");
-char *s = N_("Style:");
-char *s = N_("Table");
-char *s = N_("Table Insert");
-char *s = N_("Template");
-char *s = N_("Test URL...");
-char *s = N_("Text");
-char *s = N_("Thickness:");
-char *s = N_("Top");
-char *s = N_("Underline");
-char *s = N_("Vertical:");
-char *s = N_("Width:");
-char *s = N_("Wrap");
-char *s = N_("Wrapping:");
-char *s = N_("xxxxxxxxx");
-char *s = N_("xxxxxxxxxxxxxx");
