@@ -1,3 +1,11 @@
+2003-05-01  Abel Cheung  <maddog@linux.org.hk>
+
+	* image.c(get_sample_html): Fix typo.
+	* GNOME_GtkHTML_Editor.server.in.in.h,
+	  gtkhtml-editor-properties.glade.h,
+	  GNOME_GtkHTML_Editor.xml.in.h:
+	  Remove temp files generated by intltool.
+
 2003-04-29  Larry Ewing  <lewing@ximian.com>
 
 	* Makefile.am (CLEANFILES): add missing files to CLEANFILES to
