@@ -1,3 +1,8 @@
+2003-05-01  Abel Cheung  <maddog@linux.org.hk>
+
+	* gtkhtml-capplet.glade.h gtkhtml-properties.desktop.in.h:
+	  Remove temp files generated by intltool.
+
 2002-05-07  Radek Doulik  <rodo@ximian.com>
 
 	* Makefile.am: use versioned libraries
